atualizações de botão, fonte e background

--- a/index.html
+++ b/index.html
@@ -3,16 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Controle de Acesso</title>
+    <title>Moments</title>
     <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Modak&display=swap" rel="stylesheet">
 </head>
 <body>
         <form class="form" action="">
         <div class="card">
            <div class="card-top">
                <img class="img-user" src="img/photo_user_female.svg" alt="Image user" srcset="">
-               <h2 class="title">My Moments</h2>
-               <p>Não tem um conta? <a href="#">Registre-se</a></p>
+               <h2 class="title">Moments</h2>
+               <p>Não tem uma conta? <a href="#" class="cadastro">Registre-se</a></p>
            </div>
 
            <div class="card-group">
@@ -30,7 +31,7 @@
            </div>
 
            <div class="card-group">
-            <button type="submit">Entrar</button>
+            <button type="submit" class="entrar">Entrar</button>
            </div>
         </div>
     </form>
